# fasmNusaOS

./: CMakeLists.txt  Makefile
SOURCE/LIBC/include_bridge/: assemble.inc  avx.inc  errors.inc  exprcalc.inc  exprpars.inc  formats.inc  messages.inc  parser.inc  preproce.inc  symbdump.inc  system.inc  tables.inc  variable.inc  version.inc  x86_64.inc
SOURCE/NUSAOS/: FASM.ASM  SYSTEM.INC
